# amr

./: .clang-format  .gitignore  .gitmodules  0001-bunch-of-plotting-code.patch  CMakeLists.txt
decks/: CMakeLists.txt  profile10.pin  profile11.pin  profile23.pin  profile9.pin
notes/: 20240814.md
plugins/: .gitignore  CMakeLists.txt  Tau_plugin_amr.cc  amr_outputs.h  amr_tracer.cc  amr_tracer.h  amr_util.cc  amr_util.h  make.sh  tau_types.h
plugins/cmake/: FindTAU.cmake
plugins/perf-preload/: CMakeLists.txt  amr_monitor.h  amr_opts.h  common.cc  common.h  detailed_logger.cc  detailed_logger.h  example.cc  example_prog.cc  kokkos_hooks.cc  logging.cc  logging.h  metric.h  metric_util.h  mpi_hooks.cc  p2p.cc  p2p.h  print_utils.h  tracer.h  types.h
plugins/tau-plugin/: CMakeLists.txt  Tau_plugin_amr.cc  amr_tracer.cc  amr_tracer.h  amr_util.cc
scripts/: .gitignore  CMakeLists.txt  advection-runs.sh  build-phoebus.sh  bw_comp.sh  common.sh  compress_trace.sh  log_blast.py  mpi_common.sh  perffd_wrapper.sh  phoebus-runs.sh  profiles.log.txt  setup.sh
scripts/newscripts/: amr_common.sh  gen_topo_jobs.py  mpi_common.sh  mpi_common.sh.in  run_amr.sh  run_amr_test.sh  run_amr_test.sh.in  run_topo_test.sh.in  topo_job_template.txt.in
scripts/tau-cmake/: CMakeLists.txt  FindTAU.cmake  README.md
scripts/tau_analysis/: 20230825_athpk.py  20230831_athmsgs.py  20230911_perfprobes.py  20230919_getslot.py  20231016_analyze_pprof.py  20231023_pprof_blastwave.py  20231101_analyze_pprof.py  20231220_blkmat_plots.py  20240109_analyze_hdf5.py  20240109_plot_time.py  20240126_analyze_pprof.py  20240202_analyze_cdpp.py  20240312_parse_preload.py  20240326_blastwave_hist.py  20240415_parse_preload.py  20240415_plot_time.py  20240417_plot_pprof.py  20240418_plot_blocksim.py  20240422_misc.py  20240422_plot_policy_ranksums.py  20240520_analyze_psm.py  20240520_rebuild_psm.sh  20240527_gen_msgtraces.py  20240528_plot_topobench.py  20240604_parse_preload.py  20240611_plot_oldruns_pprof.py  20240703_parse_amrmon_rankwise.py  20240704_analyze_runlogs.py  20240709_analyze_runlogs.py  20240723_analyze_pprof.py  20240801_analyze_perf.py  20240805_analyze_amrmon.py  20240807_analyze_perf.py  20240808_aggr_amrmon_tswise.py  20240808_parse_amrmon_tswise.py  20240808_parse_preload.py  analyze_by_label.py  analyze_dynamic_blocks.py  analyze_msgs.py  analyze_pprof.py  (+25 more)
scripts/tau_analysis/all_tracesets/: runs.yaml  runs_ub22perfdbg.yaml
scripts/tau_analysis/amr/: __init__.py  amrmon_common.py  amrmon_profdata.py  analyze_log.py  plot_common.py  run_common.py  trace_common.py
tools/: .clang-format  .gitignore  CMakeLists.txt  README.md  async_comm.h  block.cc  block.h  bvar_comm.h  common.cc  common.h  driver.h  logger.cc  logger.h  topobench.cc  topobench.cpp  topology.h
tools/common/: common.cc  common.h
tools/ember-benchmarks/: CMakeLists.txt  block_common.h  block_tests.cc  common.h  common_flags.h  halo3d-26.cc  halo3d_v2.cc
tools/loadbalancing/: .clang-format  .gitignore  CMakeLists.txt  README.md  lb_lspt.cc  lb_policies.cc  lb_policies.h  lb_tests.cc  main.cc  misc_tests.cc  policy_exec_ctx.cc  policy_exec_ctx.h  policy_sim.cc  policy_sim.h  prof_reader.h  prof_set_reader.h
tools/loadbalancing/cmake/: FindGUROBI.cmake
tools/loadbalancing/include/: lb_policies.h  perfsignal.h  policy.h  policy_utils.h  policy_wopts.h
tools/loadbalancing/src/: .cmake-format.yaml  CMakeLists.txt  approx_pq.h  bin_readers.h  block_alloc_sim.cc  block_alloc_sim.h  block_sim_main.cc  cluster.h  cluster_main.cc  cluster_sim.h  config_parser.cc  config_parser.h  constants.h  cost_cache.h  globals.cc  globals.h  lb_contig_improv.cc  lb_cpp_iter.cc  lb_ilp.cc  lb_ilp_coin.cc  lb_lspt.cc  lb_policies.cc  lb_policies.h  lb_trigger.h  main.cc  policy.cc  policy.h  policy_exec_ctx.cc  policy_exec_ctx.h  policy_main.cc  policy_sim.cc  policy_sim.h  policy_stats.h  prof_base.h  prof_reader.h  prof_set_reader.h  reader_base.h  run_utils.h  tools.h  trace_utils.h  (+2 more)
tools/loadbalancing/src/benchmarks/: CMakeLists.txt  alias_method.cc  bench_util.h  benchmark.h  benchmark_main.cc  benchmark_stats.h  benchmark_test.cc  distributions.h  tabular_data.h
tools/loadbalancing/src/blocksim/: CMakeLists.txt  bin_readers.h  block_alloc_sim.cc  block_alloc_sim.h  block_sim_main.cc  cost_cache.h  policy_exec_ctx.cc  policy_exec_ctx.h  policy_stats.cc  policy_stats.h  prof_base.h  prof_reader.h  prof_set_reader.h  reader_base.h  simple_sim.cc  simple_sim.h
tools/loadbalancing/src/clustersim/: cluster.h  cluster_sim.h
tools/loadbalancing/src/distrib/: distributions.h
tools/loadbalancing/src/iterative/: rank.h  solver.h
tools/loadbalancing/src/lb/: CMakeLists.txt  assignment_cache.h  lb_chunkwise.cc  lb_chunkwise.h  lb_contig_improv.cc  lb_contig_improv2.cc  lb_cpp_iter.cc  lb_hybrid.cc  lb_hybrid2.cc  lb_hybrid2.h  lb_ilp.cc  lb_lspt.cc  lb_policies.cc  policy.cc  policy_utils.cc
tools/loadbalancing/src/lb/iterative/: rank.h  solver.h
tools/loadbalancing/src/policies/: ilp_callback.h  lb_contig_improv.cc  lb_cpp_iter.cc  lb_hybrid.cc  lb_hybrid2.cc  lb_ilp.cc  lb_lspt.cc
tools/loadbalancing/src/policies/iterative/: rank.h  solver.h
tools/loadbalancing/src/scaling/: CMakeLists.txt  config_parser.h  inputs.h  outputs.h  scale_exec_ctx.h  scale_sim.h  scale_sim_main.cc  scale_stats.h
tools/loadbalancing/tests/: CMakeLists.txt  lb_chunkwise_tests.cc  lb_tests.cc  misc_tests.cc  policy_tests.cc  scale_tests.cc
tools/topobench/src/: CMakeLists.txt  block.cc  block.h  bvar.cc  bvar.h  common.cc  common.h  driver.h  globals.cc  globals.h  graph.cc  graph.h  logger.cc  logger.h  mesh.h  mesh_gen.cc  mesh_gen.h  single_ts_trace_reader.cc  single_ts_trace_reader.h  topobench.cc  topology.cc  topology.h  trace_reader.cc  trace_reader.h
tools/topobench/tests/: CMakeLists.txt  topogen_test.cc
tools/topobench/tools/: gen-msgtrace.py
umbrella/: CMakeLists.txt
